--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -14,3 +14,17 @@ body{
     width: 100%;
     height: 100%;
 }
+
+.red { color:red; }
+.green { color:green; }
+.white { color:white }
+
+.width {width: 1px}
+
+.thumb img  {
+    border: 2px solid #55c5e9; /* Рамка вокруг фотографии */
+    padding: 15px; /* Расстояние от картинки до рамки */
+    background: #666; /* Цвет фона */
+    margin-right: 10px; /* Отступ справа */
+    margin-bottom: 10px; /* Отступ снизу */
+}
