--- a/src/main/resources/templates/filmSessions/list.html
+++ b/src/main/resources/templates/filmSessions/list.html
@@ -13,9 +13,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
             integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
             crossorigin="anonymous"></script>
-    <link rel="stylesheet" th:href="@{/styles.css}"/>
 
-    <title>Кинотеатр!</title>
+    <title>Расписание</title>
 </head>
 <body>
 
@@ -25,23 +24,36 @@
             <a class="navbar-brand" href="/">Job4jCinema</a>
             <div class="collapse navbar-collapse">
                 <div class="navbar-nav me-auto">
-                    <a class="nav-item nav-link active" href="/">Главная</a>
-                    <a class="nav-item nav-link" th:href="@{/filmSessions}">Расписание</a>
+                    <a class="nav-item nav-link" href="/">Главная</a>
+                    <a class="nav-item nav-link active" th:href="@{/filmSessions}">Расписание</a>
                     <a class="nav-item nav-link" th:href="@{/films}">Кинотека</a>
                     <a class="nav-item nav-link" th:href="@{halls}">Залы</a>
                 </div>
             </div>
         </div>
     </nav>
-    <br/>
-    <br/>
-    <h2 th:align="center">Добро пожаловать в Job4j Cinema!</h2>
-    <p th:align="center"> Приемлемые цены. Лучшее обслуживание. Невероятный комфорт.</p>
-    <div class="vertical-center">
-        <form th:action="@{/films}" method="GET" th:align="center">
-            <button type="submit" class="btn btn-dark">Кинотека</button>
-        </form>
+    <br>
+    <div class="container">
+        <div class="row">
+            <table class="table">
+                <tr>
+                    <th>Название</th>
+                    <th>Зал</th>
+                    <th>Начало сеанса</th>
+                    <th>Конец сеанса</th>
+                    <th>Цена</th>
+                </tr>
+                <tr th:each="filmSession : ${filmSessions}">
+                    <td th:text="${filmSession.film}"/>
+                    <td th:text="${filmSession.hall}"/>
+                    <td th:text="${#temporals.format(filmSession.startTime, 'd MMMM HH:mm')}"/>
+                    <td th:text="${#temporals.format(filmSession.endTime, 'd MMMM HH:mm')}"/>
+                    <td th:text="|${filmSession.price} руб.|"/>
+                </tr>
+            </table>
+        </div>
     </div>
+
 </div>
 </body>
 </html>
