--- a/src/main/resources/templates/films/list.html
+++ b/src/main/resources/templates/films/list.html
@@ -49,7 +49,7 @@
             </thead>
             <tbody>
             <tr th:each="film: ${films}" class="white">
-                <td><img th:src="@{/posters/{fileId}(fileId=*{film.fileId})}" width="250" alt="No image"></td>
+                <td><img th:src="@{/posters/{fileId}(fileId=${film.fileId})}" width="250" alt="No image"></td>
                 <td th:text="${film.name}"/>
                 <td th:text="${film.description}"/>
                 <td th:text="|${film.minimalAge}+|"/>
