--- a/src/main/resources/templates/halls/list.html
+++ b/src/main/resources/templates/halls/list.html
@@ -39,12 +39,14 @@
             <table class="table">
                 <thead>
                 <tr>
-                    <th>Название</th>
+                    <th></th>
+                    <th>Кинозал</th>
                     <th>Описание</th>
                 </tr>
                 </thead>
                 <tbody>
                 <tr th:each="hall : ${halls}">
+                    <td> <img th:src="@{/halls/{fileId}(fileId=${hall.fileId})}" width="500" alt="No image"> </td>
                     <td th:text="${hall.name}"/>
                     <td th:text="${hall.description}"/>
                 </tr>
