--- a/src/main/resources/templates/filmSessions/list.html
+++ b/src/main/resources/templates/filmSessions/list.html
@@ -29,6 +29,14 @@
                     <a class="nav-item nav-link" th:href="@{/films}">Кинотека</a>
                     <a class="nav-item nav-link" th:href="@{halls}">Залы</a>
                 </div>
+                <div class="d-flex" th:if="${user.fullName == 'Гость'}">
+                    <a class="nav-link text-secondary me-3" th:href="@{/users/register}">Регистрация</a>
+                    <a class="nav-link text-secondary" th:href="@{/users/login}">Войти</a>
+                </div>
+                <div class="d-flex" th:if="${user.fullName != 'Гость'}">
+                    <a class="nav-link text-secondary me-3" href="#" th:text="${user.fullName}"></a>
+                    <a class="nav-link text-secondary" th:href="@{/users/logout}">Выйти</a>
+                </div>
             </div>
         </div>
     </nav>
@@ -45,8 +53,8 @@
                     <th></th>
                 </tr>
                 <tr th:each="filmSession : ${filmSessions}">
-                    <td th:text="${filmSession.film}"/>
-                    <td> <a th:href="@{/halls}" th:text="${filmSession.hall}"></a></td>
+                    <td><a th:href="@{/films}" th:text="${filmSession.film}"></a></td>
+                    <td><a th:href="@{/halls}" th:text="${filmSession.hall}"></a></td>
                     <td th:text="${#temporals.format(filmSession.startTime, 'd MMMM HH:mm')}"/>
                     <td th:text="${#temporals.format(filmSession.endTime, 'd MMMM HH:mm')}"/>
                     <td th:text="|${filmSession.price} руб.|"/>
