--- a/src/main/resources/templates/tickets/buyTicket.html
+++ b/src/main/resources/templates/tickets/buyTicket.html
@@ -29,6 +29,14 @@
                     <a class="nav-item nav-link" th:href="@{/films}">Кинотека</a>
                     <a class="nav-item nav-link" th:href="@{halls}">Залы</a>
                 </div>
+                <div class="d-flex" th:if="${user.fullName == 'Гость'}">
+                    <a class="nav-link text-secondary me-3" th:href="@{/users/register}">Регистрация</a>
+                    <a class="nav-link text-secondary" th:href="@{/users/login}">Войти</a>
+                </div>
+                <div class="d-flex" th:if="${user.fullName != 'Гость'}">
+                    <a class="nav-link text-secondary me-3" href="#" th:text="${user.fullName}"></a>
+                    <a class="nav-link text-secondary" th:href="@{/users/logout}">Выйти</a>
+                </div>
             </div>
         </div>
     </nav>
@@ -59,7 +67,7 @@
         <div class="container">
             <form class="mt-3" th:action="@{/ticket/buy}" method="post" th:object="${ticket}">
                 <input type="hidden" id="session" name="sessionId" th:value="${filmSession.id}">
-                <input type="hidden">
+                <input type="hidden" id="user" name="userId" th:value="${user.id}">
 
                 <div class="row">
                     <div class="col-3"></div>
