--- a/src/main/resources/templates/users/registration.html
+++ b/src/main/resources/templates/users/registration.html
@@ -14,7 +14,7 @@
             integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
             crossorigin="anonymous"></script>
 
-    <title>Кинотека</title>
+    <title>Регистрация</title>
 </head>
 <body>
 
@@ -26,7 +26,7 @@
                 <div class="navbar-nav me-auto">
                     <a class="nav-item nav-link" href="/">Главная</a>
                     <a class="nav-item nav-link" th:href="@{/filmSessions}">Расписание</a>
-                    <a class="nav-item nav-link active" th:href="@{/films}">Кинотека</a>
+                    <a class="nav-item nav-link" th:href="@{/films}">Кинотека</a>
                     <a class="nav-item nav-link" th:href="@{halls}">Залы</a>
                 </div>
                 <div class="d-flex" th:if="${user.fullName == 'Гость'}">
@@ -40,35 +40,40 @@
             </div>
         </div>
     </nav>
-    <br>
-    <div class="container">
-        <div class="row">
-            <table class="table">
-            <thead>
-            <tr>
-                <th></th>
-                <th>Название</th>
-                <th>Описание</th>
-                <th>Возраст</th>
-                <th>Жанр</th>
-                <th>Год</th>
-                <th>Продолжительность</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="film: ${films}" class="white">
-                <td><img th:src="@{/posters/{fileId}(fileId=${film.fileId})}" width="250" alt="No image"></td>
-                <td th:text="${film.name}"/>
-                <td th:text="${film.description}"/>
-                <td th:text="|${film.minimalAge}+|"/>
-                <td th:text="${film.genre}"/>
-                <td th:text="${film.year}"/>
-                <td th:text="|${film.durationInMinutes} мин.|"/>
-            </tr>
-            </tbody>
-            </table>
+    <form class="mt-3" th:action="@{/users/register}" method="post">
+        <div class="container">
+            <div class="row">
+                <div class="col-3"></div>
+                <div class="col-6">
+                    <div class="mb-3">
+                        <label for="fullName" class="form-label"><b>Имя</b></label>
+                        <input type="text" class="form-control" id="fullName" name="fullName" placeholder="Иван"
+                               required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="email" class="form-label"><b>Почта</b></label>
+                        <input type="email" class="form-control" id="email" name="email" placeholder="ivan@mail.ru"
+                               required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="password" class="form-label"><b>Пароль</b></label>
+                        <input type="password" class="form-control" id="password" name="password" required>
+                    </div>
+                    <div class="mb-3 row">
+                        <div class="col-6"></div>
+                        <div class="col-6">
+                            <div class="row">
+                                <div class="col-6"><a class="btn btn-danger w-100" th:href="@{/}">Отмена</a></div>
+                                <div class="col-6">
+                                    <button class="btn btn-primary w-100" type="submit">Сохранить</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
+    </form>
 </div>
 </body>
 </html>
