--- a/src/main/resources/templates/success/201.html
+++ b/src/main/resources/templates/success/201.html
@@ -42,8 +42,10 @@
     </nav>
 
     <div class="container">
-        <h3 class="mt-3">Запрос выполнен успешно</h3>
-        <p class="text-success" th:text="${message}"></p>
+        <h3 class="mt-3">Вы успешно приобрели билет, с нетерпением ждем Вас!</h3>
+        <h4 class="text-success" th:text="|Фильм: ${filmSession.film}|"></h4>
+        <h4 class="text-success" th:text="|Начало киносеанса: ${#temporals.format(filmSession.startTime, 'd MMMM HH:mm')}|"></h4>
+        <h4 class="text-success" th:text="|Ваш ряд: ${ticket.rowNumber}, Ваше место: ${ticket.placeNumber}|"></h4>
     </div>
 
 </div>
