--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,27 +20,7 @@
 <body>
 
 <div class="container-fluid p-0">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-            <a class="navbar-brand" href="/">Job4jCinema</a>
-            <div class="collapse navbar-collapse">
-                <div class="navbar-nav me-auto">
-                    <a class="nav-item nav-link active" href="/">Главная</a>
-                    <a class="nav-item nav-link" th:href="@{/filmSessions}">Расписание</a>
-                    <a class="nav-item nav-link" th:href="@{/films}">Кинотека</a>
-                    <a class="nav-item nav-link" th:href="@{halls}">Залы</a>
-                </div>
-                <div class="d-flex" th:if="${user.fullName == 'Гость'}">
-                    <a class="nav-link text-secondary me-3" th:href="@{/users/register}">Регистрация</a>
-                    <a class="nav-link text-secondary" th:href="@{/users/login}">Войти</a>
-                </div>
-                <div class="d-flex" th:if="${user.fullName != 'Гость'}">
-                    <a class="nav-link text-secondary me-3" href="#" th:text="${user.fullName}"></a>
-                    <a class="nav-link text-secondary" th:href="@{/users/logout}">Выйти</a>
-                </div>
-            </div>
-        </div>
-    </nav>
+    <header th:insert="blocks/header :: header"></header>
     <br/>
     <br/>
     <h2 th:align="center">Добро пожаловать в Job4j Cinema!</h2>
