--- a/src/main/resources/templates/tickets/buyTicket.html
+++ b/src/main/resources/templates/tickets/buyTicket.html
@@ -19,27 +19,7 @@
 <body>
 
 <div class="container-fluid p-0">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-            <a class="navbar-brand" href="/">Job4jCinema</a>
-            <div class="collapse navbar-collapse">
-                <div class="navbar-nav me-auto">
-                    <a class="nav-item nav-link" href="/">Главная</a>
-                    <a class="nav-item nav-link active" th:href="@{/filmSessions}">Расписание</a>
-                    <a class="nav-item nav-link" th:href="@{/films}">Кинотека</a>
-                    <a class="nav-item nav-link" th:href="@{halls}">Залы</a>
-                </div>
-                <div class="d-flex" th:if="${user.fullName == 'Гость'}">
-                    <a class="nav-link text-secondary me-3" th:href="@{/users/register}">Регистрация</a>
-                    <a class="nav-link text-secondary" th:href="@{/users/login}">Войти</a>
-                </div>
-                <div class="d-flex" th:if="${user.fullName != 'Гость'}">
-                    <a class="nav-link text-secondary me-3" href="#" th:text="${user.fullName}"></a>
-                    <a class="nav-link text-secondary" th:href="@{/users/logout}">Выйти</a>
-                </div>
-            </div>
-        </div>
-    </nav>
+    <header th:insert="blocks/header :: header"></header>
     <br/>
     <div class="container">
         <div class="row">
@@ -67,8 +47,6 @@
         <div class="container">
             <form class="mt-3" th:action="@{/ticket/buy}" method="post" th:object="${ticket}">
                 <input type="hidden" id="session" name="sessionId" th:value="${filmSession.id}">
-                <input type="hidden" id="user" name="userId" th:value="${user.id}">
-
                 <div class="row">
                     <div class="col-3"></div>
                     <div class="col-6">
