--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -2,6 +2,7 @@
 <html lang="en"
       xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -19,34 +20,14 @@
 <body>
 
 <div class="container-fluid p-0">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-            <a class="navbar-brand" href="/">Job4jCinema</a>
-            <div class="collapse navbar-collapse">
-                <div class="navbar-nav me-auto">
-                    <a class="nav-item nav-link" href="/">Главная</a>
-                    <a class="nav-item nav-link" th:href="@{/filmSessions}">Расписание</a>
-                    <a class="nav-item nav-link" th:href="@{/films}">Кинотека</a>
-                    <a class="nav-item nav-link" th:href="@{halls}">Залы</a>
-                </div>
-                <div class="d-flex" th:if="${user.fullName == 'Гость'}">
-                    <a class="nav-link text-secondary me-3" th:href="@{/users/register}">Регистрация</a>
-                    <a class="nav-link text-secondary" th:href="@{/users/login}">Войти</a>
-                </div>
-                <div class="d-flex" th:if="${user.fullName != 'Гость'}">
-                    <a class="nav-link text-secondary me-3" href="#" th:text="${user.fullName}"></a>
-                    <a class="nav-link text-secondary" th:href="@{/users/logout}">Выйти</a>
-                </div>
-            </div>
-        </div>
-    </nav>
+    <header th:insert="blocks/header :: header"></header>
     <div class="container">
         <div class="row">
             <div class="col-3"></div>
             <div class="col-6">
                 <form class="mt-3" th:action="@{/users/login}" method="post">
                     <div class="mb-3" th:if="${error}">
-                        <p class="text-danger" th:text="${error}"></p>
+                        <p class="text-danger" th:text="Введен неверный email или пароль"></p>
                     </div>
                     <div class="mb-3">
                         <label for="email" class="form-label"><b>Почта</b></label>
