--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -27,7 +27,7 @@
             <div class="col-6">
                 <form class="mt-3" th:action="@{/users/login}" method="post">
                     <div class="mb-3" th:if="${error}">
-                        <p class="text-danger" th:text="Введен неверный email или пароль"></p>
+                        <p class="text-danger" th:text="${error}"></p>
                     </div>
                     <div class="mb-3">
                         <label for="email" class="form-label"><b>Почта</b></label>
