--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -30,8 +30,8 @@
                         <p class="text-danger" th:text="${error}"></p>
                     </div>
                     <div class="mb-3">
-                        <label for="email" class="form-label"><b>Почта</b></label>
-                        <input type="email" class="form-control" id="email" name="email" placeholder="ivan@mail.ru"
+                        <label for="username" class="form-label"><b>Логин</b></label>
+                        <input type="username" class="form-control" id="username" name="username" placeholder="MysUsername0010"
                                required>
                     </div>
                     <div class="mb-3">
