--- a/src/main/resources/templates/halls/list.html
+++ b/src/main/resources/templates/halls/list.html
@@ -34,7 +34,7 @@
                 </thead>
                 <tbody>
                 <tr th:each="hall : ${halls}">
-                    <td> <img th:src="@{/halls/{fileId}(fileId=${hall.fileId})}" width="500" alt="No image"> </td>
+                    <td> <img th:src="@{/halls/{fileId}(fileId=${hall.file.id})}" width="500" alt="No image"> </td>
                     <td th:text="${hall.name}"/>
                     <td th:text="${hall.description}"/>
                 </tr>
