--- a/src/main/resources/templates/users/registration.html
+++ b/src/main/resources/templates/users/registration.html
@@ -26,13 +26,24 @@
                 <div class="col-3"></div>
                 <div class="col-6">
                     <div class="mb-3">
-                        <label for="fullName" class="form-label"><b>Имя</b></label>
-                        <input type="text" class="form-control" id="fullName" name="fullName" placeholder="Иван"
+                        <label for="name" class="form-label"><b>Имя</b></label>
+                        <input type="text" class="form-control" id="name" name="name" placeholder="Иван"
+                               required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="surname" class="form-label"><b>Фамилия</b></label>
+                        <input type="text" class="form-control" id="surname" name="surname" placeholder="Иванов"
                                required>
                     </div>
                     <div class="mb-3">
                         <label for="email" class="form-label"><b>Почта</b></label>
                         <input type="email" class="form-control" id="email" name="email" placeholder="ivan@mail.ru"
+                               required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="username" class="form-label"><b>Логин</b></label>
+                        <input type="username" class="form-control" id="username" name="username"
+                               placeholder="MyUsername0010"
                                required>
                     </div>
                     <div class="mb-3">
