--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,7 +23,7 @@
     <header th:insert="blocks/header :: header"></header>
     <br/>
     <br/>
-    <h2 th:align="center">Добро пожаловать в Job4j Cinema!</h2>
+    <h2 th:align="center"></h2>
     <p th:align="center"> Приемлемые цены. Лучшее обслуживание. Невероятный комфорт.</p>
     <div class="vertical-center">
         <form th:action="@{/films}" method="GET" th:align="center">
