feat: добавить получение всех фильмов из микросервиса films с помощью RestTemplate

--- a/cinema-main-service/src/main/resources/templates/films/list.html
+++ b/cinema-main-service/src/main/resources/templates/films/list.html
@@ -28,7 +28,7 @@
             <tr>
                 <th></th>
                 <th>Название</th>
-                <th>Описание</th>
+                <th>Краткое описание</th>
                 <th>Возраст</th>
                 <th>Жанр</th>
                 <th>Год</th>
@@ -37,13 +37,13 @@
             </thead>
             <tbody>
             <tr th:each="film: ${films}" class="white">
-                <td><img th:src="@{/posters/{fileId}(fileId=${film.fileId})}" width="250" alt="No image"></td>
-                <td th:text="${film.name}"/>
-                <td th:text="${film.description}"/>
-                <td th:text="|${film.minimalAge}+|"/>
-                <td th:text="${film.genre}"/>
-                <td th:text="${film.year}"/>
-                <td th:text="|${film.durationInMinutes} мин.|"/>
+                <td><img th:src="${film.poster.previewUrl}" width="250" alt="No image"></td>
+                <td th:text="${film.name != null ? film.name : 'Нет данных'}"></td>
+                <td th:text="${film.shortDescription != null ? film.shortDescription : 'Нет данных'}"></td>
+                <td th:text="${film.ageRating != null ? film.ageRating + '+' : 'Нет данных'}"/>
+                <td th:text="${film.genres != null ? #strings.listJoin(film.genres, ', ') : 'Нет данных'}"></td>
+                <td th:text="${film.year != null ? film.year : 'Нет данных'}"></td>
+                <td th:text="${film.movieLength != null ? film.movieLength + 'мин.' : 'Нет данных'}"/>
             </tr>
             </tbody>
             </table>
