--- a/cinema-main-service/src/main/resources/templates/films/list.html
+++ b/cinema-main-service/src/main/resources/templates/films/list.html
@@ -24,28 +24,30 @@
     <div class="container">
         <div class="row">
             <table class="table">
-            <thead>
-            <tr>
-                <th></th>
-                <th>Название</th>
-                <th>Краткое описание</th>
-                <th>Возраст</th>
-                <th>Жанр</th>
-                <th>Год</th>
-                <th>Продолжительность</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="film: ${films}" class="white">
-                <td><img th:src="${film.poster.previewUrl}" width="250" alt="No image"></td>
-                <td th:text="${film.name != null ? film.name : 'Нет данных'}"></td>
-                <td th:text="${film.shortDescription != null ? film.shortDescription : 'Нет данных'}"></td>
-                <td th:text="${film.ageRating != null ? film.ageRating + '+' : 'Нет данных'}"/>
-                <td th:text="${film.genres != null ? #strings.listJoin(film.genres, ', ') : 'Нет данных'}"></td>
-                <td th:text="${film.year != null ? film.year : 'Нет данных'}"></td>
-                <td th:text="${film.movieLength != null ? film.movieLength + 'мин.' : 'Нет данных'}"/>
-            </tr>
-            </tbody>
+                <thead>
+                <tr>
+                    <th></th>
+                    <th>Название</th>
+                    <th>Краткое описание</th>
+                    <th>Возраст</th>
+                    <th>Жанр</th>
+                    <th>Год</th>
+                    <th>Продолжительность</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="film: ${films}" class="white">
+                    <td><a th:href="@{/films/{filmId}(filmId=${film.id})}">
+                        <img th:src="${film.poster.previewUrl}" width="250" alt="No image">
+                    </a></td>
+                    <td th:text="${film.name != null ? film.name : 'Нет данных'}"></td>
+                    <td th:text="${film.shortDescription != null ? film.shortDescription : 'Нет данных'}"></td>
+                    <td th:text="${film.ageRating != null ? film.ageRating + '+' : 'Нет данных'}"/>
+                    <td th:text="${film.genres != null ? #strings.listJoin(film.genres, ', ') : 'Нет данных'}"></td>
+                    <td th:text="${film.year != null ? film.year : 'Нет данных'}"></td>
+                    <td th:text="${film.movieLength != null ? film.movieLength + 'мин.' : 'Нет данных'}"/>
+                </tr>
+                </tbody>
             </table>
         </div>
     </div>
