feat: добавлен фон к каждому фильму и частично переработан frontend

--- a/cinema-main-service/src/main/resources/static/styles.css
+++ b/cinema-main-service/src/main/resources/static/styles.css
@@ -1,4 +1,4 @@
-body{
+.background-main-body {
     background: linear-gradient(
             to top,
             rgba(0, 0, 0, 0.8),
@@ -15,16 +15,32 @@ body{
     height: 100%;
 }
 
-.red { color:red; }
-.green { color:green; }
-.white { color:white }
+.red {
+    color: red;
+}
 
-.width {width: 1px}
+.green {
+    color: green;
+}
 
-.thumb img  {
-    border: 2px solid #55c5e9; /* Рамка вокруг фотографии */
-    padding: 15px; /* Расстояние от картинки до рамки */
-    background: #666; /* Цвет фона */
-    margin-right: 10px; /* Отступ справа */
-    margin-bottom: 10px; /* Отступ снизу */
+.white {
+    color: white
+}
+
+.width {
+    width: 1px
+}
+
+.thumb img {
+    border: 2px solid #55c5e9;
+    padding: 15px;
+    background: #666;
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
+
+.film-one-text-background {
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    padding: 10px;
 }
