--- a/cinema-main-service/src/main/resources/templates/index.html
+++ b/cinema-main-service/src/main/resources/templates/index.html
@@ -17,7 +17,7 @@
 
     <title>Кинотеатр!</title>
 </head>
-<body>
+<body class="background-main-body">
 
 <div class="container-fluid p-0">
     <header th:insert="blocks/header :: header"></header>
