--- a/cinema-main-service/src/main/resources/templates/films/one.html
+++ b/cinema-main-service/src/main/resources/templates/films/one.html
@@ -11,33 +11,58 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
             integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
             crossorigin="anonymous"></script>
-    <title>Описание фильма</title>
 
+    <link rel="stylesheet" th:href="@{/styles.css}"/>
+    <style>
+        .film-one-background-image {
+            background-image: url('[[${film.backdrop.url}]]');
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+            min-height: 100%;
+            width: 100%;
+        }
+    </style>
+    <title>Описание фильма</title>
 </head>
-<body>
+<body class="film-one-background-image">
 <header th:insert="blocks/header :: header"></header>
+
 <div class="container mt-5">
-    <div class="card">
-        <img th:src="${film.backdrop.url}" class="card-img-top" alt="Постер фильма">
-        <div class="card-body">
-            <h5 class="card-title" th:text="${film.name != null ? film.name : 'Нет данных'}">Название фильма</h5>
-            <p class="card-text" th:text="${film.alternativeName != null ? film.alternativeName : 'Нет данных'}">
-                <strong>Альтернативное название:</strong> Альтернативное название фильма</p>
-            <p class="card-text" th:text="${film.shortDescription != null ? film.shortDescription : 'Нет данных'}">
-                <strong>Краткое описание:</strong> Краткое описание фильма</p>
+    <div class="row">
+        <div class="col-md-4">
+            <img th:src="${film.poster.url}" class="img-fluid poster" alt="Постер фильма">
+        </div>
+        <div class="col-md-8 film-one-text-background">
+            <h5 th:text="${film.name != null ? film.name : 'Нет данных'}">Название фильма</h5>
+            <p th:text="${film.alternativeName != null ? film.alternativeName : 'Нет данных'}">
+                <strong>Альтернативное название:</strong> Альтернативное название фильма
+            </p>
+            <p th:text="${film.shortDescription != null ? film.shortDescription : 'Нет данных'}">
+                <strong>Краткое описание:</strong> Краткое описание фильма
+            </p>
             <p class="card-text" th:text="${film.description != null ? film.description : 'Нет данных'}"><strong>Описание:</strong>
                 Описание фильма</p>
-            <p class="card-text" th:text="${film.year != null ? film.year : 'Нет данных'}"><strong>Год выпуска:</strong>
+            <p class="card-text" th:text="${film.year != null ? film.year : 'Нет данных'}"><strong>Год
+                выпуска:</strong>
                 Год</p>
-            <p class="card-text" th:text="${film.genres != null ? #strings.listJoin(film.genres, ', ') : 'Нет данных'}">
+            <p class="card-text"
+               th:text="${film.genres != null ? #strings.listJoin(film.genres, ', ') : 'Нет данных'}">
                 <strong>Жанры:</strong> Жанр1, Жанр2</p>
-            <p class="card-text" th:text="${film.countries != null ? #strings.listJoin(film.countries, ', ') : 'Нет данных'}">
+            <p class="card-text"
+               th:text="${film.countries != null ? #strings.listJoin(film.countries, ', ') : 'Нет данных'}">
                 <strong>Страны:</strong> Страна1, Страна2</p>
-            <p class="card-text" th:text="${film.movieLength != null ? film.movieLength + 'мин.' : 'Нет данных'}">
+            <p class="card-text" th:text="${film.movieLength != null ? film.movieLength + ' мин.' : 'Нет данных'}">
                 <strong>Длительность:</strong> Длительность минут</p>
             <p class="card-text" th:text="${film.ageRating != null ? film.ageRating + '+' : 'Нет данных'}"><strong>Возрастное
                 ограничение:</strong> Возрастное ограничение+</p>
             <p class="card-text"><strong>Рейтинги:</strong> КиноПоиск: Рейтинг КП, IMDb: Рейтинг IMDb</p>
+            <p class="card-text"><strong>Рейтинги:</strong> КиноПоиск: <span
+                    th:text="${film.rating.kpRate}">Рейтинг КП</span>,
+                IMDb: <span th:text="${film.rating.imdbRate}">Рейтинг IMDb</span>,
+                Рейтинг кинокритиков: <span th:text="${film.rating.filmCriticsRate}">Рейтинг кинокритиков</span>,
+                Рейтинг российских кинокритиков: <span th:text="${film.rating.russianFilmCriticsRate}">Рейтинг российских кинокритиков</span>
+            </p>
         </div>
     </div>
 </div>
