--- a/cinema-main-service/src/main/resources/templates/films/one.html
+++ b/cinema-main-service/src/main/resources/templates/films/one.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,12 +26,13 @@
     <title>Описание фильма</title>
 </head>
 <body class="film-one-background-image">
-<header th:insert="blocks/header :: header"></header>
 
+<header th:insert="blocks/header :: header"></header>
 <div class="container mt-5">
     <div class="row">
         <div class="col-md-4">
-            <img th:src="${film.poster.url}" class="img-fluid poster" alt="Постер фильма">
+            <img th:src="${film.poster != null ? film.poster.url : '/images/poster_not_found.jpg'}"
+                 class="img-fluid poster" alt="Постер фильма">
         </div>
         <div class="col-md-8 film-one-text-background">
             <h5 th:text="${film.name != null ? film.name : 'Нет данных'}">Название фильма</h5>
