--- a/cinema-main-service/src/main/resources/templates/films/list.html
+++ b/cinema-main-service/src/main/resources/templates/films/list.html
@@ -13,26 +13,25 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
             integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
             crossorigin="anonymous"></script>
-
+    <link rel="stylesheet" th:href="@{/styles.css}"/>
     <title>Кинотека</title>
 </head>
-<body>
+<body class="background-all-body">
 
 <div class="container-fluid p-0">
     <header th:insert="blocks/header :: header"></header>
-    <br>
-    <div class="container">
+    <div class="container text-for-background">
         <div class="row">
             <table class="table">
                 <thead>
                 <tr>
                     <th></th>
-                    <th>Название</th>
-                    <th>Краткое описание</th>
-                    <th>Возраст</th>
-                    <th>Жанр</th>
-                    <th>Год</th>
-                    <th>Продолжительность</th>
+                    <th class="white">Название</th>
+                    <th class="white">Краткое описание</th>
+                    <th class="white">Возраст</th>
+                    <th class="white">Жанр</th>
+                    <th class="white">Год</th>
+                    <th class="white">Продолжительность</th>
                 </tr>
                 </thead>
                 <tbody>
