--- a/cinema-main-service/src/main/resources/templates/users/login.html
+++ b/cinema-main-service/src/main/resources/templates/users/login.html
@@ -14,12 +14,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
             integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
             crossorigin="anonymous"></script>
-
+    <link rel="stylesheet" th:href="@{/styles.css}"/>
     <title>Вход</title>
 </head>
-<body>
+<body class="background-all-body">
 
-<div class="container-fluid p-0">
+<div class="container-fluid p-0 text-for-background">
     <header th:insert="blocks/header :: header"></header>
     <div class="container">
         <div class="row">
