--- a/cinema-main-service/src/main/resources/static/styles.css
+++ b/cinema-main-service/src/main/resources/static/styles.css
@@ -1,10 +1,10 @@
-.background-main-body {
+.background-home-body {
     background: linear-gradient(
             to top,
             rgba(0, 0, 0, 0.8),
             rgba(0, 0, 0, 0) 0%,
             rgba(0, 0, 0, 0.8) 80%
-    ), url(/images/background.jpg);
+    ), url(/images/background_home.jpg);
     color: #fff;
     background-size: 1600px 1000px;
     content: "";
@@ -13,6 +13,15 @@
     top: 0;
     width: 100%;
     height: 100%;
+}
+
+.background-all-body {
+    background-image: url(/images/background_all.jpg);
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    min-height: 100%;
+    width: 100%;
 }
 
 .red {
@@ -39,7 +48,7 @@
     margin-bottom: 10px;
 }
 
-.film-one-text-background {
+.text-for-background {
     background-color: rgba(0, 0, 0, 0.5);
     color: white;
     padding: 10px;
