--- a/cinema-main-service/src/main/resources/templates/blocks/header.html
+++ b/cinema-main-service/src/main/resources/templates/blocks/header.html
@@ -6,13 +6,13 @@
 <div th:fragment="header">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="/">Cinema</a>
+            <a class="navbar-brand">Cinema</a>
             <div class="collapse navbar-collapse">
                 <div class="navbar-nav me-auto">
                     <a class="nav-item nav-link active" href="/">Главная</a>
                     <a class="nav-item nav-link active" th:href="@{/filmSessions}">Расписание</a>
                     <a class="nav-item nav-link active" th:href="@{/films}">Кинотека</a>
-                    <a class="nav-item nav-link active" th:href="@{halls}">Залы</a>
+                    <a class="nav-item nav-link active" th:href="@{/halls}">Залы</a>
                 </div>
                 <div class="d-flex" th:unless="${#authorization.expression('isAuthenticated()')}">
                     <a class="nav-link text-white me-3" th:href="@{/users/register}">Регистрация</a>
