--- a/cinema-main-service/src/main/resources/templates/success/201.html
+++ b/cinema-main-service/src/main/resources/templates/success/201.html
@@ -13,16 +13,16 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
             integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
             crossorigin="anonymous"></script>
-
+    <link rel="stylesheet" th:href="@{/styles.css}"/>
     <title>Успешно</title>
 </head>
-<body>
+<body class="background-all-body">
 
-<div class="container-fluid p-0">
+<div class="container-fluid p-0 text-for-background">
     <header th:insert="blocks/header :: header"></header>
 
     <div class="container">
-        <h3 class="mt-3">Вы успешно приобрели билет, с нетерпением ждем Вас!</h3>
+        <h3 class="mt-3 white">Вы успешно приобрели билет, с нетерпением ждем Вас!</h3>
         <h4 class="text-success" th:text="|Фильм: ${filmSession.film}|"></h4>
         <h4 class="text-success" th:text="|Начало киносеанса: ${#temporals.format(filmSession.startTime, 'd MMMM HH:mm')}|"></h4>
         <h4 class="text-success" th:text="|Ваш ряд: ${ticket.rowNumber}, Ваше место: ${ticket.placeNumber}|"></h4>
