--- a/cinema-main-service/src/main/resources/templates/tickets/buyTicket.html
+++ b/cinema-main-service/src/main/resources/templates/tickets/buyTicket.html
@@ -27,7 +27,7 @@
                 <div class="row mb-3">
                     <div class="mb-3">
                         <label for="film" class="form-label white"><b>Название фильма</b></label>
-                        <p type="text" class="form-control" id="film" th:text="${filmSession.film}"></p>
+                        <p type="text" class="form-control" id="film" th:text="${filmSession.getName}"></p>
                         <label for="hall" class="form-label white"><b>Зал</b></label>
                         <p type="text" class="form-control" id="hall" th:text="${filmSession.hall}"></p>
                         <label for="startTime" class="form-label white"><b>Начало киносеанса</b></label>
