feat: в микросевисе film-service перейти с RestTemplate на OpenFeign

--- a/cinema-main-service/src/main/resources/templates/films/list.html
+++ b/cinema-main-service/src/main/resources/templates/films/list.html
@@ -43,7 +43,7 @@
                     </a></td>
                     <td th:text="${film.name}"></td>
                     <td th:text="${film.shortDescription}"></td>
-                    <td th:text="${film.ageRating}"/>
+                    <td th:text="${film.ageRating + '+'}"/>
                     <td th:text="${#strings.listJoin(film.genres, ', ')}"></td>
                     <td th:text="${film.year}"></td>
                     <td th:text="${film.movieLength + ' мин.'}"/>
