--- a/cinema-main-service/src/main/resources/templates/index.html
+++ b/cinema-main-service/src/main/resources/templates/index.html
@@ -20,7 +20,7 @@
 <body class="background-home-body">
 
 <div class="container-fluid p-0">
-    <header th:insert="blocks/header :: header"></header>
+    <header th:insert="~{blocks/header :: header}"></header>
     <br/>
     <br/>
     <h2 th:align="center">Добро пожаловать!</h2>
