--- a/cinema-main-service/src/main/resources/templates/errors/404.html
+++ b/cinema-main-service/src/main/resources/templates/errors/404.html
@@ -19,7 +19,7 @@
 <body class="background-all-body">
 
 <div class="container-fluid p-0 text-for-background">
-    <header th:insert="blocks/header :: header"></header>
+    <header th:insert="~{blocks/header :: header}"></header>
     <div class="container">
         <h3 class="mt-3">Произошла ошибка</h3>
         <h4 class="text-danger" th:text="${message}"></h4>
