--- a/cinema-main-service/src/main/resources/templates/films/one.html
+++ b/cinema-main-service/src/main/resources/templates/films/one.html
@@ -27,7 +27,7 @@
 </head>
 <body class="film-one-background-image">
 
-<header th:insert="blocks/header :: header"></header>
+<header th:insert="~{blocks/header :: header}"></header>
 <div class="container mt-5">
     <div class="row">
         <div class="col-md-4">
