--- a/cinema-main-service/src/main/resources/templates/halls/list.html
+++ b/cinema-main-service/src/main/resources/templates/halls/list.html
@@ -19,7 +19,7 @@
 <body class="background-all-body">
 
 <div class="container-fluid p-0">
-    <header th:insert="blocks/header :: header"></header>
+    <header th:insert="~{blocks/header :: header}"></header>
     <div class="container text-for-background">
         <div class="row">
             <table class="table">
