--- a/cinema-main-service/src/main/resources/templates/success/201.html
+++ b/cinema-main-service/src/main/resources/templates/success/201.html
@@ -19,7 +19,7 @@
 <body class="background-all-body">
 
 <div class="container-fluid p-0 text-for-background">
-    <header th:insert="blocks/header :: header"></header>
+    <header th:insert="~{blocks/header :: header}"></header>
 
     <div class="container">
         <h3 class="mt-3 white">Вы успешно приобрели билет, с нетерпением ждем Вас!</h3>
