--- a/cinema-main-service/src/main/resources/templates/tickets/buyTicket.html
+++ b/cinema-main-service/src/main/resources/templates/tickets/buyTicket.html
@@ -19,7 +19,7 @@
 <body class="background-all-body">
 
 <div class="container-fluid p-0">
-    <header th:insert="blocks/header :: header"></header>
+    <header th:insert="~{blocks/header :: header}"></header>
     <div class="container">
         <div class="row">
             <div class="col-3"></div>
