--- a/cinema-main-service/src/main/resources/templates/users/login.html
+++ b/cinema-main-service/src/main/resources/templates/users/login.html
@@ -20,7 +20,7 @@
 <body class="background-all-body">
 
 <div class="container-fluid p-0 text-for-background">
-    <header th:insert="blocks/header :: header"></header>
+    <header th:insert="~{blocks/header :: header}"></header>
     <div class="container">
         <div class="row">
             <div class="col-3"></div>
