--- a/cinema-main-service/src/main/resources/templates/users/registration.html
+++ b/cinema-main-service/src/main/resources/templates/users/registration.html
@@ -19,7 +19,7 @@
 <body class="background-all-body">
 
 <div class="container-fluid p-0">
-    <header th:insert="blocks/header :: header"></header>
+    <header th:insert="~{blocks/header :: header}"></header>
     <form class="mt-3" th:action="@{/users/register}" method="post">
         <div class="container">
             <div class="row">
