feat: добавить список коллекций фильмов в БД filmAPI, для добавления фильмов из конкретной подборки

--- a/cinema-main-service/src/main/resources/templates/films/list.html
+++ b/cinema-main-service/src/main/resources/templates/films/list.html
@@ -152,8 +152,8 @@
                                       th:object="${requestAddFilms}">
                                     <label for="hall-select"><b>Выберите подборку фильмов</b></label>
                                     <select class="form-control" id="collection-select" th:name="collection" required>
-                                        <option th:each="collection : ${filmsCollections}" th:value="${collection}"
-                                                th:text="${collection}">Подборка
+                                        <option th:each="collection : ${filmsCollections}" th:value="${collection.searchName}"
+                                                th:text="${collection.name}">Подборка
                                         </option>
                                     </select>
                                     <br>
